syntax = "proto2";

message ReportMessage {

    enum OptionalBool {
        OPTIONAL_BOOL_UNDEFINED = -1;
        OPTIONAL_BOOL_FALSE = 0;
        OPTIONAL_BOOL_TRUE = 1;
    }

    message Time {
        required uint64 timestamp = 1;
        required sint32 time_zone = 2;
        optional int64 server_time_offset = 3;
        optional bool obtained_before_first_synchronization = 4 [default = false];
    }

    message Location {
        required double lat = 1;
        required double lon = 2;
        optional uint64 timestamp = 3;
        optional uint32 precision = 4;
        optional uint32 direction = 5;
        optional uint32 speed = 6;
        optional int32 altitude = 7;

        enum Provider {
            PROVIDER_UNKNOWN = 0;
            PROVIDER_GPS = 1;
            PROVIDER_NETWORK = 2;
        }
        optional Provider provider = 8 [default = PROVIDER_UNKNOWN];
        optional string original_provider = 9;
    }

    message Session {
        required uint64 id = 1;

        enum ConnectionType {
            CONNECTION_CELL = 0;
            CONNECTION_WIFI = 1;
            CONNECTION_UNDEFINED = 2;
            CONNECTION_BLUETOOTH = 3;
            CONNECTION_ETHERNET = 4;
            CONNECTION_MOBILE_DUN = 5;
            CONNECTION_MOBILE_HIPRI = 6;
            CONNECTION_MOBILE_MMS = 7;
            CONNECTION_MOBILE_SUPL = 8;
            CONNECTION_VPN = 9;
            CONNECTION_WIMAX = 10;
            CONNECTION_LOWPAN = 11;
            CONNECTION_WIFI_AWARE = 12;
        }

        message SessionDesc {
            required Time start_time = 1;
            required string locale = 2;

            enum SessionType {
                SESSION_FOREGROUND = 0;
                SESSION_BACKGROUND = 1;
                SESSION_DIAGNOSTIC = 2;
            }
            optional SessionType session_type = 5;
        }
        required SessionDesc session_desc = 2;

        message Event {
            required uint64 number_in_session = 1;
            required uint64 time = 2;

            enum EventType {
                EVENT_INIT = 1;
                EVENT_START = 2;
                EVENT_CLIENT = 4;
                EVENT_REFERRER = 5;
                EVENT_ALIVE = 7;
                // reserved 8 to 12;
                EVENT_FIRST = 13;
                // reserved 14 to 15;
                EVENT_OPEN = 16;
                EVENT_UPDATE = 17;
                EVENT_PERMISSIONS = 18;
                EVENT_APP_FEATURES = 19;
                EVENT_PROFILE = 20;
                EVENT_REVENUE = 21;
                // reserved 22 to 24;
                EVENT_PROTOBUF_ANR = 25;
                EVENT_PROTOBUF_CRASH = 26;
                EVENT_PROTOBUF_ERROR = 27;
                // reserved 28;
                EVENT_CLEANUP = 29;
                // reserved 30 to 34;
                EVENT_ECOMMERCE = 35;
                // reserved 36 to 37;
                EVENT_WEBVIEW_SYNC = 38;
                // reserved 39;
                EVENT_AD_REVENUE = 40;
                // reserved 41;
                EVENT_CLIENT_EXTERNAL_ATTRIBUTION = 42;
            }
            required uint32 type = 3;
            optional string name = 4;
            optional bytes value = 5;
            optional Location location = 6;

            message NetworkInfo {
                reserved 1 to 2;
                optional ConnectionType connection_type = 3 [default = CONNECTION_UNDEFINED];
                optional string cellular_network_type = 4;
                reserved 5;
            }
            optional NetworkInfo network_info = 7;
            optional string environment = 8;
            reserved 9;
            optional uint32 bytes_truncated = 10;

            enum EncodingType {
                NONE = 0;
                RSA_AES_CBC = 1;
                GZIP = 2;
            }
            optional EncodingType encoding_type = 12 [default = NONE];
            optional OptionalBool location_tracking_enabled = 13 [default = OPTIONAL_BOOL_UNDEFINED];
            optional bytes profile_id = 14;
            optional OptionalBool first_occurrence = 15 [default = OPTIONAL_BOOL_UNDEFINED];
            optional uint64 global_number = 16;
            optional uint64 number_of_type = 17;

            reserved 18 to 21;

            enum EventSource {
                NATIVE = 0;
                JS = 1;
                SDK_SYSTEM = 2;
            }
            optional EventSource source = 22 [default = NATIVE];
            optional bool attribution_id_changed = 23 [default = false];
            optional uint64 open_id = 24 [default = 1];

            message ExtrasEntry {
                optional bytes key = 1;
                optional bytes value = 2;
            }
            repeated ExtrasEntry extras = 25;
        }
        repeated Event events = 3;
    }
    repeated Session sessions = 3;

    message RequestParameters {
        reserved 3, 6 to 9, 11 to 14, 16, 25 to 32;
        optional string uuid = 1;
        optional string device_id = 2;
        optional string app_version_name = 4;
        optional uint32 kit_version = 5;
        optional string os_version = 10;
        optional string locale = 15;
        optional bool is_rooted = 17;
        optional uint32 app_build_number = 18;
        optional string ifv = 19;
        reserved 20;
        optional string adv_id = 21;
        optional uint32 client_kit_version = 22;

        message Clid {
            required string name = 1;
            required uint64 value = 2;
        }
        repeated Clid clids = 23;
        optional string api_key_128 = 24;
    }
    optional RequestParameters report_request_parameters = 4;

    message EnvironmentVariable
    {
        required string name = 1;
        required string value = 2;
    }
    repeated EnvironmentVariable app_environment = 7;

    reserved 8 to 9;

    message SimInfo {
        optional uint32 country_code = 1;
        optional uint32 operator_id = 2;
        optional string operator_name = 3;
        optional bool data_roaming = 4 [default = false];
        reserved 5;
    }
    repeated SimInfo sim_info = 10;

    repeated string certificates_sha1_fingerprints = 11;

    repeated bytes additional_api_keys = 12;
}
